<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Anstop</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="reset_during_count">Cannot reset during count!</string>
    <string name="hour">hour(s)</string>
    <string name="motion_checkbox">Use motion sensor to start and stop</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_during_count">Cannot refresh during count!</string>
    <string name="start_stop">Start/Stop</string>
    <string name="lap">- Lap! -</string>
    <string name="laps">Laps:</string>
    <string name="about">About</string>
    <string name="stop">Stopwatch</string>
    <string name="countdown">Countdown</string>
    <string name="countdown_please_set_hms">Please select the hours, minutes, and seconds to count down.</string>
    <string name="countdown_completed_please_refresh">"The countdown to 0 has completed.
Please hit Refresh to start again."</string>
    <string name="about_dialog">"Anstop v1.5, a small application to stop and countdown time.
Copyright (C) 2009-2012 MJ and Jeremy Monin &lt;anstop.googlecode.com>
License is GPLv2 (http://www.gnu.org/licenses/gpl-2.0.html)
For the source code look at anstop.googlecode.com"</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="save_dialog">Please enter a name to save the results</string>
    <string name="no_entry">No Entries!</string>
    <string name="delete">Delete</string>
    <string name="export">Export ...</string>
    <string name="export_succes">Saved sucessfully on SD Card!</string>
    <string name="export_fail">Exporting failed!</string>
    <string name="export_all">Export all ...</string>
    <string name="mode_was">Mode was:</string>
    <string name="start_time">Start Time was:</string>
    <string name="started_at">Started at:</string>
    <string name="vibrate_checkbox">Vibrate when clicking on Start or Stop</string>
    <string name="saved_succes">Saved successfully!</string>
    <string name="mode">Mode</string>
    <string name="cancel">Cancel</string>
    <string name="vibrate">Vibrate</string>
    <string name="motion_sensor">Motion Sensor</string>
    <string name="send">Send...</string>
    <string name="startup_mode">Mode at Startup</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="seconds">Seconds:</string>
    <string name="first_start">Tip: You can swipe left or right, to change the mode!</string>
    <string name="change">Change</string>
    <string name="comment">Comment</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_change_mode_message">Changing the mode will reset the stopwatch.</string>
    <string name="confirm_refresh_message">Are you sure you want to refresh?</string>
    <string name="confirm_reset_message">Are you sure you want to reset?</string>
    <string name="lap_display_format">Lap display format</string>
    <string name="lap_display_format_must_select_one">You must select at least one display format.</string>
    <string name="lap_format_delta">Lap: (+ h:mm:ss:d)</string>
    <string name="lap_format_delta_summary">Time since previous lap</string>
    <string name="lap_format_elapsed">Split: h mm:ss:d</string>
    <string name="lap_format_elapsed_summary">Time since the stopwatch began</string>
    <string name="lap_format_wallclock">Wall clock: @ hh:mm</string>
    <string name="lap_format_wallclock_summary">Time of day</string>
</resources>
