<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="first_preferencescreen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/motion_sensor" android:key="use_motion_sensor" android:summary="@string/motion_checkbox" />
    <CheckBoxPreference android:title="@string/vibrate" android:key="vibrate" android:summary="@string/vibrate_checkbox" android:defaultValue="true" />
    <ListPreference android:entries="@array/modes_strings" android:title="@string/startup_mode" android:key="mode" android:summary="@string/startup_mode" android:defaultValue="0" android:entryValues="@array/modes_ints" />
    <PreferenceCategory android:title="@string/lap_display_format">
        <CheckBoxPreference android:title="@string/lap_format_elapsed" android:key="lap_format_elapsed" android:summary="@string/lap_format_elapsed_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/lap_format_delta" android:key="lap_format_delta" android:summary="@string/lap_format_delta_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/lap_format_wallclock" android:key="lap_format_systime" android:summary="@string/lap_format_wallclock_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>