<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/stopwatchLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/mainLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:id="@id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/hourView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="\ 0" />
            <TextView android:id="@id/hourLabelView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hour" />
        </LinearLayout>
        <RelativeLayout android:id="@id/RelativeLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/minView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 00" />
                <TextView android:id="@id/sepView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" />
                <TextView android:id="@id/secondsView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 00" />
                <TextView android:id="@id/sepView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" />
                <TextView android:id="@id/dsecondsView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 0" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/startButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_stop" />
            <Button android:id="@id/resetButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset" />
            <Button android:id="@id/lapButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lap" />
        </LinearLayout>
        <ScrollView android:id="@id/lapScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/lapView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/laps" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>