<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/countDownLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/mainLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:id="@id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/hourView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="\ 0" />
                <TextView android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hour" />
            </LinearLayout>
            <LinearLayout android:id="@id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/minView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 00" />
                <TextView android:id="@id/sepView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" />
                <TextView android:id="@id/secondsView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 00" />
                <TextView android:id="@id/sepView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" />
                <TextView android:id="@id/dsecondsView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="\ 0" />
            </LinearLayout>
            <LinearLayout android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@id/startButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_stop" />
                <Button android:id="@id/refreshButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/refresh" />
            </LinearLayout>
            <LinearLayout android:id="@id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hours" />
                <Spinner android:id="@id/hourSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:id="@id/LinearLayout05" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minutes" />
                <Spinner android:id="@id/minSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:id="@id/LinearLayout06" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seconds" />
                <Spinner android:id="@id/secSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView android:id="@id/countdown_startTimeView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>